--- a/c2/app/views/includes/header.html
+++ b/c2/app/views/includes/header.html
@@ -18,6 +18,8 @@
         <li class="{% if (isActive('/console')) %}active{% endif %}"><a href="/console">Console</a></li>
         <li class="{% if (isActive('/forever')) %}active{% endif %}"><a href="/forever">Running Apps</a></li>
         <li class="{% if (isActive('/ide')) %}active{% endif %}"><a href="/ide">IDE</a></li>
+        <li class=""><a href="http://81.17.19.237:8081/MetaLiquid/application.wadl">API</a></li>
+        
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Scripts <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
